# rustCourse

./: Cargo.toml  README.md
hwork1/: Cargo.toml  README.md
hwork1/src/: main.rs
hwork11/: Cargo.toml  README.md
hwork11/src/: client_utils.rs  lib.rs  server_utils.rs  shared.rs
hwork13/: Cargo.toml
hwork13/src/: client_utils.rs  lib.rs  server_utils.rs
hwork15/: Cargo.toml  README.md  db.sqlite
hwork15/server_db/: send_me.txt
hwork15/src/: client_utils.rs  db.rs  lib.rs  server_utils.rs
hwork2/: Cargo.toml
hwork2/src/: main.rs
hwork3/: Cargo.toml
hwork3/src/: csv_parser.rs  main.rs  utils.rs
hwork4/: Cargo.toml
hwork4/src/: csv_parser.rs  data.csv  direct_mode.rs  interactive_mode.rs  main.rs  tasks.rs  utils.rs
hwork5/: Cargo.toml
hwork5/src/: lib.rs
hwork5/src/client_utils/: mod.rs
hwork5/src/server_utils/: mod.rs
