[package]
name = "hwork15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/bin/client.rs"
[[bin]]
name = "server"
path = "src/bin/server.rs"


[lib]
path = "src/lib.rs"

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
image = "0.25.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "^1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "macros", "sqlite"] }
bcrypt = "0.15.1"
